<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">SalTour</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_click">Title click</string>
    <string name="menu_home">Home</string>
    <string name="menu_jugar">Play</string>
    <string name="menu_perfil">My profile</string>
    <string name="menu_ranking">Statistics</string>
    <string name="menu_compartir">Share</string>
    <string name="menu_group">Social</string>
    <string name="user">User</string>
    <string name="menu_ayuda">Help</string>
    <string name="menu_salir">Logout</string>
    <string name="tiene_dudas">Do you have any questions? Contact us!</string>
    <string name="estadistica_individual">Individual</string>
    <string name="estadistica_general">General</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_recuperacion">Recovery mail</string>
    <string name="enviar">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="entrar">Login</string>
    <string name="entrar_invitado">Login as guest</string>
    <string name="registro">Signup</string>
    <string name="olvidar_password">Forgot my password</string>
    <string name="compartir_eslogan">Do you like it? Tell the world!</string>
    <string name="detener">Stop</string>
    <string name="escanear">Scan QR</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="guardar">Save</string>
    <string name="reto_en_curso">Challenge in progress, you must finish it or stop time before starting another</string>
    <string name="retos_completados">Completed challenges</string>
    <string name="retos_en_curso">Challeneges in progress</string>
    <string name="introducir_email">You must provide an email</string>
    <string name="email_no_valido">Invalid email</string>
    <string name="bienvenido">Welcome</string>
    <string name="invitado">Guest</string>
    <string name="funcionalidades">Sign up to enjoy these features</string>
    <string name="porcentaje_retos">% of challeneges</string>
    <string name="cerrar_sesion">Are you sure you want to logout?</string>
    <string name="ultima_conexion">Last seen</string>
    <string name="progreso_personal">Personal progress</string>
    <string name="ocho_caracteres">The new password must contain at least 8 characters</string>
    <string name="password_actualizada">Updated password, for security, re-login</string>
    <string name="password_no_actualizada">Error, password not updated</string>
    <string name="error_autenticacion">Authentication error</string>
    <string name="datos_actualizados">Updated data</string>
    <string name="te_desafio">I challenge you to know Salamanca better than me at: http://ladespensadelahuertacharra.c1.biz/</string>
    <string name="error_envio">Sending error</string>
    <string name="reto_erroneo">This challenge is not started</string>
    <string name="tiempo_detenido">Stop time</string>
    <string name="introducir_password">You must enter a password</string>
    <string name="comprobando_datos">Verifying data...</string>
    <string name="correo_no_verificado">Non verified email</string>
    <string name="recibir_verificacion">Do you want us to resend the verification email again?</string>
    <string name="aceptar">OK</string>
    <string name="reenviada_verificacion">Verification mail resent</string>
    <string name="cancelar">Cancel</string>
    <string name="credenciales_incorrectas">Wrong user or password</string>
    <string name="activar_ubicacion">You mus activate your location</string>
    <string name="error_imagen">An error occured while retrieving image</string>
    <string name="position">position</string>
    <string name="retos_completados2">challenges completed</string>
    <string name="jugadores_activos">Active users:</string>
    <string name="enviada_verificacion">Verification mail sent</string>
    <string name="usuario_existente">Existing user</string>
    <string name="registro_no_completado">Error while registering. Try it again</string>
</resources>
